--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,11 @@ version: 2.1
 orbs:
   browser-tools: circleci/browser-tools@1.2.3
 jobs:
+  deploy-job:
+    steps:
+      - add_ssh_keys:
+          fingerprints:
+            - "93:fc:74:bf:f7:48:4c:0e:af:28:1a:59:1c:fc:c9:e5"
   build:
     working_directory: ~/ng-project
     docker:
