--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --base-href /ng-twitter/",
+    "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test --watch=false",
-    "deploy": "ngh --dir dist/ng-twitter --no-silent",
     "test:watch": "ng test",
     "test:headless": "ng test --watch=false --browsers=ChromeHeadless",
     "tdd": "ng test"
